--- a/src/share/generic.css
+++ b/src/share/generic.css
@@ -88,7 +88,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    min-height: 10vh;
+    min-height: 12vh;
     background-color: white;
     
   }
